fix text align

--- a/site.css
+++ b/site.css
@@ -11,6 +11,7 @@ h1 {
     margin-top: 21px;
     margin-bottom: 30px;
     line-height: 32px;
+    text-align: center;
 }
 
 h3 {
@@ -20,6 +21,7 @@ h3 {
     	margin-top: 10px;
     	margin-bottom: 45px;
     	color: #201821;
+    	text-align: center;
 }
 
 .slider_container {
